# incolumepy_tdd

./: .bumpversion.cfg  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
incolume/py/static_html/pt.m.wikipedia.org/wiki/: Lista_de_presidentes_do_Brasil.html
incolume/py/static_html/www.python.org/: index.html  search
incolume/py/static_html/www.python.org/dev/: index.html
incolume/py/static_html/www.python.org/doc/: av
incolume/py/static_html/www.python.org/download/: alternatives
incolume/py/static_html/www.python.org/events/: python-events
incolume/py/static_html/www.python.org/jobs/: index.html
incolume/py/static_html/www.python.org/privacy/: index.html
incolume/py/static_html/www.python.org/psf/: index.html
incolume/py/static_html/www.python.org/psf-landing/: index.html
incolume/py/tdd/: __init__.py  arquivos.py  calc.py  employers.py  pessoa.py  romanos.py  transporte.py  version.txt
incolume/py/tdd/arquivos/: __init__.py
incolume/py/tdd/geometria/: circulo.py
incolume/py/tdd/json_files/: estados.py  ibge.json  presidentes.json  presidentes.py  truncus1.json  truncus15.json  truncus16.json  truncus6.json
incolume/py/tdd/menu/: __init__.py  main.py
incolume/py/tdd/permissions/: __init__.py  genfile.py
incolume/py/tdd/scraping/: google.py  html_formating_classes.py  htmlformating.py  python_org.py
incolume/py/tdd/sequences/: __init__.py  fatorial.py  fibonacci.py
incolume/py/tdd/utils/: clousures.py  decorators.py  handlers_hashes.py  read_employers_csv.py  regex.py  senhas.py
incolume/py/tdd/utils/decode/: __init__.py  morse.py  rgb_to_hex_conversion.py
incolume/py/tdd/veiculos/: aeronaves.py  barco.py  bicicleta.py  carro.py  veiculos.py
incolumepy/: 0-fatorial.txt  0_fatorial.py  12-romanos.txt  factorial.py  romanos.py
incolumepy/sequences/: 1-fatorial.txt  fatorial.py
incolumepy/static_html/css/: legis_3.css
incolumepy/static_html/google.com/: index.html
incolumepy/static_html/www.python.org/: index.html
incolumepy/static_html/www.python.org/about/: index.html
incolumepy/static_html/www.python.org/about/apps/: index.html
incolumepy/static_html/www.python.org/about/help/: index.html
incolumepy/static_html/www.python.org/about/legal/: index.html
incolumepy/static_html/www.python.org/about/quotes/: index.html
incolumepy/static_html/www.python.org/accounts/login/: index.html?next=%2Fjobs%2Fmine%2F
incolumepy/static_html/www.python.org/blogs/: index.html
incolumepy/static_html/www.python.org/community/: index.html  survey
incolumepy/static_html/www.python.org/community/diversity/: index.html
incolumepy/static_html/www.python.org/community/forums/: index.html
incolumepy/static_html/www.python.org/community/irc/: index.html
incolumepy/static_html/www.python.org/community/logos/: index.html
incolumepy/static_html/www.python.org/community/merchandise/: index.html
incolumepy/static_html/www.python.org/community/sigs/: index.html
incolumepy/static_html/www.python.org/community/workshops/: index.html
incolumepy/static_html/www.python.org/dev/: index.html
incolumepy/static_html/www.python.org/dev/core-mentorship/: index.html
incolumepy/static_html/www.python.org/dev/peps/: index.html
incolumepy/static_html/www.python.org/dev/security/: index.html
incolumepy/static_html/www.python.org/doc/: index.html
incolumepy/static_html/www.python.org/doc/essays/: index.html
incolumepy/static_html/www.python.org/doc/nonenglish/: index.html
incolumepy/static_html/www.python.org/downloads/: index.html
incolumepy/static_html/www.python.org/downloads/mac-osx/: index.html
incolumepy/static_html/www.python.org/downloads/windows/: index.html
incolumepy/static_html/www.python.org/events/: index.html
incolumepy/static_html/www.python.org/events/calendars/: index.html
incolumepy/static_html/www.python.org/events/python-user-group/: index.html
incolumepy/static_html/www.python.org/jobs/: index.html?page=1  index.html?page=2  index.html?page=3  index.html?page=4
incolumepy/static_html/www.python.org/jobs/4286/: index.html
incolumepy/static_html/www.python.org/jobs/4288/: index.html
incolumepy/static_html/www.python.org/jobs/4289/: index.html
incolumepy/static_html/www.python.org/jobs/4292/: index.html
incolumepy/static_html/www.python.org/jobs/4295/: index.html
incolumepy/static_html/www.python.org/jobs/4299/: index.html
incolumepy/static_html/www.python.org/jobs/4301/: index.html
incolumepy/static_html/www.python.org/jobs/4302/: index.html
incolumepy/static_html/www.python.org/privacy/: index.html
incolumepy/static_html/www.python.org/psf/: license  wirexfer
incolumepy/static_html/www.python.org/shell/: index.html
incolumepy/static_html/www.python.org/success-stories/: index.html
incolumepy/tdd/: 13-romanos.txt  __init__.py  romanos.py
incolumepy/tdd/sequences/: fatorial.py
src/incolumepy/sequences/: fatorial.py
src/incolumepy/static_html/atos/: l8666-txtSF.html
src/incolumepy/static_html/www.python.org/: index.html
src/incolumepy/tdd/sequences/: 01-fatorial.txt  fatorial.py
tests/: 00_environment_tests.py  02_calculadora_tests.py  03_employers_tests.py  04_veiculos_tests.py  05_aeronave_tests.py  06_barco_tests.py  07_bicicleta_tests.py  08_carro_tests.py  09_transporte_tests.py  0_calculadora_tests.py  10_circulo_tests.py  11_clousures_tests.py  12_decorators_tests.py  13_romanos_tests.py  14_romanos_tests.py  15_romanos_tests.py  16_recursividade_fibonacci_tests.py  16_recursividade_tests.py  17_recursividade_fatorial_tests.py  18_scraping_html_tests.py  19_navegable_selenium_tests.py  1_employers_tests.py  20_handle_html_tests.py  21_CSV_tests.py  21_regex.py  21_regex_tests.py  22_CSV_tests.py  22_employer_pessoa_tests.py  22_hashes_tests.py  23_CSV_tests.py  24_hashes_tests.py  25_rgb_to_hex_conversion.py  25_rgb_to_hex_conversion_tests.py  26_decode_the_morse_code.py  26_decode_the_morse_code_tests.py  27_senhas_tests.py  27_test_senhas.py  28_arquivos_tests.py  28_test_arquivos.py  29_permissions_OS_tests.py  (+32 more)
(+275 files in other folders)
