[tool.poetry]
name = "incolume.py.tdd"
version = "2.7.0a0"
description = "Python Utilities for trainning"
authors = ["britodfbr <contato@incolume.com.br>"]
homepage="https://gitlab.com/development-incolume/treinamentos/incolumepy_tdd"

keywords = ['python', 'jedy', 'incolume', 'incolumepy', 'treinamento']
repository = 'https://gitlab.com/development-incolume/incolumepy.utils'
packages = [
  {include = "incolumepy", from='src'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Operating System :: OS Independent',
    'Natural Language :: Portuguese (Brazilian)',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: Free For Educational Use",
    "Topic :: Education",
    'Topic :: Utilities',
]
include = [
  'README.md',
  "CHANGELOG.md",
  'docs/CONTRIBUTORS.md',
]
exclude = [
  "examples/",
  "ez_setup",
  "tests/",
]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.10"

[tool.poetry.dev-dependencies]
nose = "1.3.7"
tox = "3.14.3"
mock = "3.0.5"
bs4 = "0.0.1"
html5lib = "1.0.1"
ipdb = "0.12.3"
python-magic = "^0.4.18"
requests = "2.22.0"
Faker = "^5.0.0"
selenium-wire = "^2.1.2"
pandas = "^1.1.5"
openpyxl = "^3.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_format = '%(asctime)s; %(levelname)-8s; %(name)s; %(module)s; %(funcName)s; %(message)s'
log_date_format ='%FT%T%N%z'
#addopts = "--doctest-modules --cov=coding_dojo_jedi -sx --cov-report term-missing --cov-report html:coverage_report/html --cov-report xml:coverage_report/cov.xml"
testpaths = [
  "tests",
  "src/incolumepy/tdd",
]
python_files = [
  "test_*.py",
  "*_tests.py"
]

markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "webtest: marks tests as webtest (deselect with '-m \"not webtest\"')",
  "fast: marks tests as fast (deselect with '-m \"not fast\"')",
]
